--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,16 +1,12 @@
 version: 2
 
 build:
-  os: ubuntu-24.04
+  os: ubuntu-22.04
   tools:
-    python: "3.13"
+    python: "3.10"
 
   apt_packages:
     - asciidoctor
 
-sphinx:
-  configuration: docs/conf.py
-
-python:
-  install:
-    - requirements: docs/requirements.txt
+mkdocs:
+  configuration: mkdocs.yml
